# EXPR-Interpreter

./: .gitignore  CMakeLists.txt  README.md  arithmetics.cpp  arithmetics.h  basicTest.txt  dividebyzero.txt  expressions.cpp  expressions.h  interpreter.cpp  interpreter.h  main.cpp  nested.txt  rules.txt  saved-expressions.cpp  saved-expressions.h  test.txt  tokenizer.h
include/: arithmetics.h  expressions.h  interpreter.h  saved-expressions.h
src/: CMakeLists.txt  arithmetics.cpp  expressions.cpp  interpreter.cpp  saved-expressions.cpp
tests/: CMakeLists.txt  arithmeticsTests.cpp  expressionsTests.cpp  interpreterTests.cpp  saved-expressionsTests.cpp
